--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,9 @@
             "name": "Tautvydas Dulskis",
             "email": "tautvydas@dulskis.eu"
         }
-    ]
+    ],
+  "require": {
+    "ext-pdo": "*"
+  }
 }
+
